--- a/CLIPSFormsExample/ClipsFormsExample.resx
+++ b/CLIPSFormsExample/ClipsFormsExample.resx
@@ -126,4 +126,81 @@
   <metadata name="clipsSaveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>351, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAC0q7AAtKuwALCjpATMw+wMxLvcDLivuAywo5wQiH84DLSr7ACsn
+        8gAiH9IAIh/SACIf0wEiH9IAIh/SAB8dogAfHqIAHh2iACAfowAgHqMAIB+jAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAtKswAIyDTABoXqAEZF6cAGxiwNBoYq3YaGKt0GhireBoXqYcgHqdXEA2cAA4LmgEuLLQAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAmItcCJiPYACYj2SslItDBJCHNuCQh
+        zLIjIMu6Hxy/cCMgzwAiH9ADNzL/ADw3/wEgHMnQHxzF/x4bxP0fHMX9HBm+/xoYqdIAAKgAAADbAB4c
+        qQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACso4QMrKOIAKyjiRSwq
+        3v8sKdv9Kyja/Coo2f8iIMq2LCnlACkm3gUlItUAJCHVOiYj0v8mI9D6JSLO+yYj0PkdGrr/FxWi1nRp
+        /wIzLdYAGxmnAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALCniAy0q
+        4wAsKeNFLivf/y0q3PktKtz4LCna/yMgzLMvLOcALCneBion1gAnJdeKKSbU/ygl0vsnJND/JiTR/RkX
+        rf8bGazaLibyAhoVpgAcGqkBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAtKuQDLivlAC0q5UcvLOH/Lize/C4r3fwtKtz/JCHNtjAt6QBGROwCBwHrBCkn2NUqJ9X/KSbT/Skm
+        0/8kIcr9GRem/x8dudsAAEEDBQJ0ABwaqgEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAC8s5gMvLOcALivnSDAu4/8wLeD8Lyzf/C4s3v8kIs61MzDtACUh2AAnI907KyjZ/yso
+        1v4qJ9T/KyjX/x4bu/0dG6v/Ih/C3AAAAwMAAGIAHBqrAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAMC3nAzAt6AAvLOhJMi/k/zEu4vwwLuH8Ly3f/yUi0LU0MfAALSvZACon
+        3YotKtr/LCnY+yso1v8qKNj/GRer/SMhuv8iH8TdAAAPBAAAWwAdGqwBAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAxLukDMS7qADAt6kozMOb/Mi/j/DIv4vwxLuH/JiPRtS8s
+        7AAUD+8HLSre1i4r2/8tKtn9LSrZ/yYkz/8ZF6T9KCbI/yIfxd0AAB8EAABYAB0arQEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADIv6wMyMOwAMS7rSzQx6P8zMeX8MzDk/DIv
+        4/8mI9O3Ly3oACom4z4vLN//Lyzc/i0r2f8vLN3/IB2//x4crP0rKNH/IiDG3gAAMAUAAF0AHRuuAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMzDsAzQx7QAyL+1NNTPp/zUy
+        5vw0MeX8MzDk/yck1bc0MecALivjjjEu3/8wLd37Lyzb/y4r3f8bGK//JSO8/Ssp1f8jIMffAAA/BQAA
+        YgAdG64BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0Me4DNTLvADMw
+        7k42NOv/NjPo/DUz5/w0Meb/KCXXslRT6gAxLuTZMi/g/zAu3v0xLt7/KSbU/xsZqf8rKcz9KynW/yQh
+        yOAAAEsGAQBoAB4brwEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADUy
+        7wM2M/AANDHwTzg17P83NOn8NjTp/DUy6P8nJdinKCXnLzMw5f8zMOH+MS/f/zMw4/8iH8P/IR+x/y4r
+        1f0sKtf/JCLJ4QAAUgYCAGsAHhywAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAANjPxAzc08gA1MvFQOTbu/zg16/w3Ner8NjPp/yck2qIwLeh/NTLl/zMx4vsyMOD/Mi/i/xwa
+        s/8pJ8L/LizZ/S0r2P8lIsrhAABZBwMAbwAfHLEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA3NPIDODXzADYz81E6N+//OTbs/Dg27Pw3NOv/JyTgtTQx6co2M+b/NDHk/TUy
+        5P8sKdn+HBqu/y8t0v8uLNn9Liza/yUjy+IAAGAHBAF0AB8dsgEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADg19AQ5NvQANzT0Ujo48P86N+78OTbt/jg17v8pJubqNjTp9jY0
+        5/81MuT/NjTn/yMgyfkiILj9Mi/a/y8t2/0vLNv/JiPM4wAAZggFA3gAIB2zAQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOTb1BDk29gA3NfVUOzny/zo47/w6N+//ODXx/zEu
+        7v84Nur+NzTo/zY05v40MuX/HxzEuyspy/IyL93/MC3c/TAt3P8mJM3jAABrCAYDewAgHbMBAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA5N/YEOjf3ADg19lU8OvP/Oznx/Ds4
+        8f84NfX/NzXw/jk36v83Nen/ODXo/zAu3/kbGMJrMS/Y9zIw3v8xLt39MC7c/yckzuQDAXEJCAZ/ACEe
+        tAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADo39wQ7OPgAOTb4Vj06
+        9P88OfL8PDn0/zg19/85N+7/OTfr/zg26v04Nen/LCnZyx0bxzQzMd//MzDg/zEv3v0xLt3/KCXP5QcE
+        dwoLCIQAIh+1AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOzj5BDw5
+        +QA6N/lXPTv1/z069Pw8Off/ODb2/zs57v86N+3/OTfr+zY06P8nJNCALSrlHzQy4/8zMeH/MjDf/TIv
+        3v8oJc/mCQd8Cg0KhwAiILYBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA8OfoEPDr6ADo3+lg+PPf/Pjv1/Ds4+f86N/T/PDnv/zo47f87OO3+MzHk/yAdvDE2M/ckNjPm/zQx
+        4v8zMOD9MjDf/ykm0OYMCYALDwyKACMhtwEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADw5+wQ9OvsAOzj7WT88+P8+PPj7Ojj6/zw68/88OvD/Oznu/Ts47v8xLt7YY2D/ADUy
+        9S43Nej/NDLi/zMx4P0zMOD/KSfR5w4MgwsRDo0AJCK4AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAPTr8BD07/AA7OPxbPz35/z47+vs7OPn/Pjvz/zw68f88OvD7OTbs/y4r
+        2I0yL+sANTPzMzg16f81MuP/NDHh/TMx4P8qJ9LoEQ+HDBMRkAAmI7kBAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9O/wEPjv9ADw5/FxAPvv/PTv7+zw6+P8/PPT/PTry/z07
+        8f42NOj/LCnOPjEu4QA3NPUxOTbq/zUz4/80MuL9NDHh/yoo0ugUEYsMFhOTACclugEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD47/QQ/PP0APDn9XUE+/P88Ovv7Pzz3/z88
+        9P89O/L9PTry/zQy49YiIIYHNjTpADg19y85N+v/NjPk/zUy4v00MuH/KyjT6RcUjg0YFZYAKCa7AQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPjv+BD88/gA9Ov1eQD79/z06
+        +/tAPff/Pzz1/z489Ps7OfD/MzDfiy8s5gA/Pf8AOTb5Ljk36/82NOT/NTPj/TQy4v8rKdPqGxiTDhsZ
+        mQAqKLwBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/PP4EQD3/AD47
+        /l8/Pf3/Pjz7+0A+9/8/PPX/Pz31/jk37f8xL9c8LCrRAD06/wA5NvkuOjfr/zc05f82M+P9NTLi/ywp
+        1OseHJYOHhycACwqvQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD88
+        /gRBPv8APjv+YD48/f9APvv7QT74/z899v0/PfX/ODXp1iclaARJRv8BOzj7ADo3+S46OOz/NzTl/jYz
+        4/01M+P/LCrU6yEfmg8hH58ALiu+AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAPzz+BD88/QA8Ov1hPzz9/0NA+/hBP/n8QT74+D889P83NeWLNTLuADY08AY7OfkAOjf5Ljs4
+        7P84NeX/NjTk/TYz4/8tKtXsIyCcECIgoQAuLL8BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA5NvwENzX7ADYz+2FAPv7/Q0D9+0E++v9BP/r+PTvz/zc03To1Mt4AOTbrBTs4
+        +AA6N/grOjfs/zc05f82M+T9NTLj/y4r1uoqKKEPKSalADIwwgEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADAt9wIxLfgAMCz3NjUy+LgzMPWvMzD0sTIv8rszMOySa2x+Amho
+        gwA6N+QBNTL0ADUy9QQxLuYmLyziKS4s4SktK98sLSvZJIaHjQFlZaUAQD7RAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKSXcACkl3AApJdwAKSXcACkl3AAlI9kAKijZACon
+        2QA1M9oBLy3ZADEu2wAwLfoAMC36ADAt+gAwLfoAOTfEAEA/lwBAP5cAQUCYAEFAmABBQJgAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA+gUk///8gT/6BQE/+gUAv/oFAL/6BAC/+gYAv/oGAL/6BAC/+gQAv/oE
+        AL/6BAC/+gAAv/oAAL/6AAC/+gAAv/oAAL/6AAC/+gAAv/oAAL/6AAC/+gCAv/oAgL/6AIC/+gCAv/oB
+        gL/6AYC/+gCAv/oCgL/6AoC/+gKAv/7SnP8=
+</value>
+  </data>
 </root>
